--- a/phase1.ipynb
+++ b/phase1.ipynb
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +770,25 @@
       "100%|██████████| 2499/2499 [00:24<00:00, 102.14it/s]\n",
       "100%|██████████| 2497/2497 [00:26<00:00, 95.52it/s]\n",
       "100%|██████████| 2483/2483 [01:04<00:00, 38.49it/s]\n",
-      " 73%|███████▎  | 451/620 [00:08<00:03, 56.19it/s]"
+      "100%|██████████| 620/620 [00:15<00:00, 40.45it/s]\n",
+      "100%|██████████| 624/624 [00:43<00:00, 14.26it/s]\n",
+      "100%|██████████| 623/623 [00:18<00:00, 32.85it/s]\n",
+      "100%|██████████| 620/620 [00:06<00:00, 93.40it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'NEUTROPHIL', 2: 'EOSINOPHIL', 3: 'MONOCYTE', 4: 'LYMPHOCYTE'}\n",
+      "{0: 'Mononuclear', 1: 'Polynuclear'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -860,6 +878,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -889,7 +914,148 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Functions for Plotting Learning Curves and Confusion Matrix\n",
+    "class MetricsCheckpoint(Callback):\n",
+    "    # Callback that saves metrics after each epoch\n",
+    "    def __init__(self, savepath):\n",
+    "        super(MetricsCheckpoint, self).__init__()\n",
+    "        self.savepath = savepath\n",
+    "        self.history = {}\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        for k, v in logs.items():\n",
+    "            self.history.setdefault(k, []).append(v)\n",
+    "        np.save(self.savepath, self.history)\n",
+    "\n",
+    "def plotKerasLearningCurve():\n",
+    "    plt.figure(figsize=(10,5))\n",
+    "    metrics = np.load('logs.npy')[()]\n",
+    "    filt = ['acc'] # try to add 'loss' to see the loss learning curve\n",
+    "    for k in filter(lambda x : np.any([kk in x for kk in filt]), metrics.keys()):\n",
+    "        l = np.array(metrics[k])\n",
+    "        plt.plot(l, c= 'r' if 'val' not in k else 'b', label='val' if 'val' in k else 'train')\n",
+    "        x = np.argmin(l) if 'loss' in k else np.argmax(l)\n",
+    "        y = l[x]\n",
+    "        plt.scatter(x,y, lw=0, alpha=0.25, s=100, c='r' if 'val' not in k else 'b')\n",
+    "        plt.text(x, y, '{} = {:.4f}'.format(x,y), size='15', color= 'r' if 'val' not in k else 'b')   \n",
+    "    plt.legend(loc=4)\n",
+    "    plt.axis([0, None, None, None]);\n",
+    "    plt.grid()\n",
+    "    plt.xlabel('Number of epochs')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "\n",
+    "def plot_confusion_matrix(cm, classes,\n",
+    "                          normalize=False,\n",
+    "                          title='Confusion matrix',\n",
+    "                          cmap=plt.cm.Blues):\n",
+    "    \"\"\"\n",
+    "    This function prints and plots the confusion matrix.\n",
+    "    Normalization can be applied by setting `normalize=True`.\n",
+    "    \"\"\"\n",
+    "    plt.figure(figsize = (5,5))\n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=90)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "    thresh = cm.max() / 2.\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, cm[i, j],\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')\n",
+    "\n",
+    "def plotLearningCurve(history):\n",
+    "    plt.figure(figsize=(8,8))\n",
+    "    plt.subplot(1,2,1)\n",
+    "    plt.plot(history.history['acc'])\n",
+    "    plt.plot(history.history['val_acc'])\n",
+    "    plt.title('model accuracy')\n",
+    "    plt.ylabel('Accuracy')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.legend(['train', 'test'], loc='upper left')\n",
+    "    plt.savefig('./analysis.png')\n",
+    "    #plt.clf()\n",
+    "    # summarize history for loss\n",
+    "    plt.subplot(1,2,2)\n",
+    "    plt.plot(history.history['loss'])\n",
+    "    plt.plot(history.history['val_loss'])\n",
+    "    plt.title('model loss')\n",
+    "    plt.ylabel('loss')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.legend(['train', 'test'], loc='upper left')\n",
+    "    plt.savefig('./loss_curve.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def runKerasCNNAugment(a,b,c,d,e,epochs):\n",
+    "    batch_size = 128\n",
+    "    num_classes = len(b[0])\n",
+    "#     img_rows, img_cols = a.shape[1],a.shape[2]\n",
+    "    img_rows,img_cols=60,80\n",
+    "    input_shape = (img_rows, img_cols, 3)\n",
+    "    model = Sequential()\n",
+    "    model.add(Conv2D(32, kernel_size=(3, 3),\n",
+    "                     activation='relu',\n",
+    "                     input_shape=input_shape,strides=e))\n",
+    "    model.add(Conv2D(64, (3, 3), activation='relu'))\n",
+    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "    model.add(Dropout(0.25))\n",
+    "    model.add(Flatten())\n",
+    "    model.add(Dense(128, activation='relu'))\n",
+    "    model.add(Dropout(0.5))\n",
+    "    model.add(Dense(num_classes, activation='softmax'))\n",
+    "    model.compile(loss=keras.losses.categorical_crossentropy,\n",
+    "                  optimizer=keras.optimizers.Adadelta(),\n",
+    "                  metrics=['accuracy'])\n",
+    "    augmented_images = ImageDataGenerator(\n",
+    "        featurewise_center=False,  # set input mean to 0 over the dataset\n",
+    "        samplewise_center=False,  # set each sample mean to 0\n",
+    "        featurewise_std_normalization=False,  # divide inputs by std of the dataset\n",
+    "        samplewise_std_normalization=False,  # divide each input by its std\n",
+    "        zca_whitening=False,  # apply ZCA whitening\n",
+    "        rotation_range=5,  # randomly rotate images in the range (degrees, 0 to 180)\n",
+    "        width_shift_range=0.1,  # randomly shift images horizontally (fraction of total width)\n",
+    "        height_shift_range=0.1,  # randomly shift images vertically (fraction of total height)\n",
+    "        horizontal_flip=True,  # randomly flip images\n",
+    "        vertical_flip=False)  # randomly flip images\n",
+    "    history = model.fit_generator(augmented_images.flow(a,b, batch_size=42),\n",
+    "                        steps_per_epoch=len(a) / 42, epochs=epochs, validation_data = [c, d],callbacks = [MetricsCheckpoint('logs')])\n",
+    "    score = model.evaluate(c,d, verbose=0)\n",
+    "    print('\\nKeras CNN #1C - accuracy:', score[1],'\\n')\n",
+    "    y_pred = model.predict(c)\n",
+    "    map_characters = dict_characters\n",
+    "    print('\\n', sklearn.metrics.classification_report(np.where(d > 0)[1], np.argmax(y_pred, axis=1), target_names=list(map_characters.values())), sep='')    \n",
+    "    Y_pred_classes = np.argmax(y_pred,axis=1) \n",
+    "    Y_true = np.argmax(d,axis=1)\n",
+    "    plotKerasLearningCurve()\n",
+    "    plt.show()  \n",
+    "    plotLearningCurve(history)\n",
+    "    plt.show()\n",
+    "    confusion_mtx = confusion_matrix(Y_true, Y_pred_classes) \n",
+    "    plot_confusion_matrix(confusion_mtx, classes = list(dict_characters.values())) \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runKerasCNNAugment(X_train,y_trainHot,X_test,y_testHot,1)"
+   ]
   }
  ],
  "metadata": {
